# atcrs

./: .gitignore  Cargo.toml  README.md  airports_response.json  fa_flight_ids.txt  rrt_plan.g
src/: _main.rs  lib.rs  main.rs
src/aero/: airport.rs  mod.rs  search.rs  track.rs
