[package]
name = "atcrs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
csv = "1.4.0"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
sguaba = "0.9.10"
tokio = { version = "1.48.0", features = ["full"] }
uom = "0.37.0"
