[package]
name = "atcrs"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
csv = "1.4.0"
dubins_paths = { version = "2.7.1", features = ["f64", "glam"] }
itertools = "0.14.0"
kdtree = "0.8.0"
radians = "0.3.1"
rand = { version = "0.9.2", features = ["small_rng"] }
rand_distr = "0.5.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sguaba = "0.9.10"
tokio = { version = "1.48.0", features = ["full"] }
uom = "0.37.0"
uuid = { version = "1.18.1", features = ["v4"] }
